# sweetmcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECOMPOSITION_AUDIT_RESULTS.md  DECOMPOSITION_TODO.md  INSTALL.md  README.md  SEE-WITH-ME.md  TODO.md  TODO_MODULE_VISIBILITY_AUDIT.md  TODO_WARNINGS_ERRORS.md  axum  build.rs  cargo_check_output.txt  cyrupd.toml  daemon  fix_duplicates.py  install.ps1  install.sh  signing.toml.example  sweetmcp-pingora.service.toml  sweetmcp.service
daemon/: Cargo.toml  README.md  build.rs  test-config.toml
daemon/src/: cli.rs  config.rs  daemon.rs  installer.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  service.rs  state_machine.rs
daemon_install/: .gitignore  Cargo.toml  README.md
daemon_install/resources/: README.md
daemon_install/src/: builder.rs  error.rs  lib.rs  linux.rs  macos.rs  windows.rs
llm_client/llm_cli/: Cargo.toml
llm_client/llm_cli/src/: config.rs  main.rs
llm_client/llm_cli/src/commands/: chat.rs  completion.rs  mod.rs
llm_client/llm_interface/: Cargo.toml
llm_client/llm_interface/src/llms/: mod.rs
llm_client/llm_interface/src/requests/: error.rs  mod.rs  req_components.rs  res_components.rs  stop_sequence.rs
llm_client/llm_models_macros/: Cargo.toml
llm_client/llm_prompt/: Cargo.toml
llm_client/llm_prompt/src/: lib.rs  prompt_message.rs  token_count.rs
llm_client/llm_prompt/src/variants/: api_prompt.rs  local_prompt.rs
plugins/browser/: CLAUDE.md  Cargo.toml
plugins/browser/docs/samples/: README.md  anthropic_example.rs  character_chat_example.rs  llm_chat_example.rs  ocr_example.rs
plugins/browser/src/: lib.rs
plugins/browser/src/agent/: message_manager.rs  mod.rs
plugins/browser/src/browser/: mod.rs
plugins/browser/src/controller/: controller.rs
plugins/browser/src/utils/: errors.rs  llm.rs  (+1 more)
plugins/qr-code/: .gitignore  Cargo.toml
plugins/qr-code/src/: lib.rs
sixel6vt/: Cargo.toml  INSTALLER_PHASE1.md  Makefile  PHASE2_SIGNING_SETUP_COMPLETE.md  build-config.toml  build-installers.rs
sixel6vt/.cargo/: config.toml
sixel6vt/scripts/: build-local.ps1  build-local.sh  ci-build.sh
sixel6vt/signing/: README.md  linux-package.sh  macos-sign.sh
sixel6vt/src/: setup.rs
sixel6vt/src/components/: app.rs
sixel6vt/src/renderer/: mod.rs
sixel6vt/src/terminal/: mod.rs
sweetmcp-axum/: .gitignore  Cargo.toml
sweetmcp-axum/.roo/rules-code/: rules.md
sweetmcp-axum/src/: config.rs  daemon_integration.rs  lib.rs  main.rs  mod.rs  router.rs  types.rs
sweetmcp-axum/src/context/: memory_adapter.rs  mod.rs  rpc.rs
sweetmcp-axum/src/db/: client.rs  config.rs  error.rs  mod.rs
sweetmcp-axum/src/plugin/: manager.rs
sweetmcp-axum/src/prompt/: mod.rs  model.rs  service.rs
sweetmcp-axum/src/sampling/: chat.rs  notifications.rs  service.rs
sweetmcp-axum/src/tool/: service.rs
sweetmcp-client-autoconfig/: Cargo.toml
sweetmcp-client-autoconfig/src/: config.rs  lib.rs  main.rs  watcher.rs  watcher_v2.rs
sweetmcp-client-autoconfig/src/clients/: claude_desktop.rs  cursor.rs  mod.rs  roo_code.rs  windsurf.rs  zed.rs
sweetmcp-daemon/: Cargo.toml  build.rs  entitlements.plist
sweetmcp-daemon/src/: cli.rs  config.rs  daemon.rs  installer.rs  ipc.rs  lib.rs  main.rs  manager.rs  service.rs
sweetmcp-daemon/src/install/: builder.rs  error.rs  fluent_voice.rs  linux.rs  macos.rs  mod.rs  windows.rs
sweetmcp-daemon/src/service/: autoconfig.rs
sweetmcp-daemon/src/signing/: config.rs  linux.rs  macos.rs  mod.rs  windows.rs
sweetmcp-memory/: .cursorignore  COGNITIVE_README.md  CONFIGURATION.md  Cargo.toml
sweetmcp-memory/benches/: README.md
sweetmcp-memory/benches/python_comparison/: README.md  download_and_run_python_mem0.py
sweetmcp-memory/examples/: cognitive_optimization.rs
sweetmcp-memory/src/: lib.rs
sweetmcp-memory/src/api/: mod.rs  sdk.rs
sweetmcp-memory/src/cognitive/: EVALUATION_GUIDE.md  attention.rs  committee.rs  evolution.rs  manager.rs  mcts.rs  mesh.rs  mod.rs  orchestrator.rs  quantum_mcts.rs  quantum_old.rs  quantum_orchestrator.rs  state.rs  types.rs
sweetmcp-memory/src/graph/: entity.rs  graph_db.rs  mod.rs
sweetmcp-memory/src/llm/: openai.rs
sweetmcp-memory/src/memory/: episodic.rs  manager.rs  memory_manager.rs  memory_metadata.rs  memory_node.rs  memory_relationship.rs  memory_schema.rs  mod.rs  procedural.rs  query.rs  retrieval.rs  semantic.rs  storage.rs
sweetmcp-memory/src/migration/: converter.rs  exporter.rs  importer.rs  mod.rs  schema_migrations.rs  validator.rs
sweetmcp-memory/src/monitoring/: metrics.rs  mod.rs  operations.rs  performance.rs
sweetmcp-memory/src/query/: index_aware_query.rs  mod.rs  query_builder.rs  query_monitor.rs  query_optimizer.rs
sweetmcp-memory/src/schema/: graph_schema.rs  memory_schema.rs  mod.rs
sweetmcp-memory/src/transaction/: mod.rs  transaction_manager.rs
sweetmcp-memory/src/utils/: config.rs  error.rs
sweetmcp-memory/src/vector/: embedding_model.rs  in_memory_async.rs  vector_index.rs  vector_repository.rs  vector_search.rs  vector_store.rs
sweetmcp-memory/tests/: mcp_memory_tests.rs
sweetmcp-plugin-builder/: Cargo.toml  README.md
sweetmcp-plugin-builder/src/: lib.rs
sweetmcp-plugins/browser/: ASYNC_COMPLIANCE.md  Cargo.toml  TASKLIST.md  config.yaml
sweetmcp-plugins/browser/docs/: browser_automation_mcp.md  citations.md  implementation_guide.md
sweetmcp-plugins/browser/src/: automation.rs  commands.rs  errors.rs  lib.rs  main.rs.backup  pdk.rs
sweetmcp-plugins/eval-sh/: Cargo.toml
sweetmcp-plugins/eval-sh/src/: lib.rs
sweetmcp-plugins/fetch/: Cargo.toml
sweetmcp-plugins/fetch/.cargo/: config.toml
sweetmcp-plugins/fetch/src/: bevy.rs  chromiumoxide.rs  firecrawl.rs  hyper.rs  lib.rs
sweetmcp-plugins/fs/: Cargo.toml  README.md
sweetmcp-plugins/fs/src/: lib.rs
sweetmcp-plugins/hash/: Cargo.toml
sweetmcp-plugins/hash/examples/: fluent_example.rs
sweetmcp-plugins/hash/src/: builder.rs  fluent.rs  lib.rs  plugin.rs
sweetmcp-plugins/reasoner/: Cargo.toml  Dockerfile
sweetmcp-plugins/reasoner/src/: lib.rs  reasoner.rs  state.rs  strategies.rs
(+335 files in other folders)
