[workspace]
resolver = "3"
members = [
    "packages/sweetmcp-axum",
    "packages/sweetmcp-pingora", 
    "packages/sweetmcp-daemon",
    "packages/sweetmcp-memory",
    "packages/sweetmcp-client-autoconfig",
    "packages/sweetmcp-plugin-builder",
    "packages/sweetmcp-voice-tools",
    "packages/sweetmcp-workspace-hack",
    # WebAssembly plugins - now properly configured with extism-pdk 1.4.1
    "sweetmcp-plugins/arxiv",
    "sweetmcp-plugins/browser",
    "sweetmcp-plugins/eval-js",
    "sweetmcp-plugins/eval-py", 
    "sweetmcp-plugins/eval-rs",
    "sweetmcp-plugins/eval-sh",
    "sweetmcp-plugins/fetch",
    "sweetmcp-plugins/fs",
    "sweetmcp-plugins/hash",
    "sweetmcp-plugins/ip",
    "sweetmcp-plugins/qr-code",
    "sweetmcp-plugins/reasoner",
    "sweetmcp-plugins/time",
]

[workspace.dependencies]
crossbeam-channel = { version = "0.5.15" }
parking_lot = { version = "0.12.4" }
jwalk = "0.8.1"
rayon = "1.10.0"

[workspace.package]
version = "0.1.0"
authors = ["David Maple<david@cyrup.ai"]
homepage = "https://github.com/cyrup/sweetmcp"
edition = "2024"  
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/sweetmcp"
