[package]
name         = "cyrupd"
version      = "0.2.0"
edition      = "2021"
license      = "Apache-2.0 OR MIT"

[dependencies]
anyhow               = "1"
chrono               = { version = "0.4", features = ["serde"] }
crossbeam-channel    = "0.5"
env_logger           = "0.11"
log                  = "0.4"
nix                  = { version = "0.27", default-features = false, features = ["fs", "process", "signal", "user"] }
once_cell            = "1"          # one‑time global config
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
toml                 = "0.8"
systemd = { version = "0.10", optional = true }
clap         = { version = "4.5", features = ["derive"] }   # for the new CLI
which        = "8"                                         # locate system executables
exec = "0.3.1"
elevated_daemon_installer = { path = "../elevated_daemon_installer" }
dirs = "6.0.0"

[features]
default = []
systemd-notify = ["systemd"]
systemd = ["dep:systemd"]

[build-dependencies]
pkg-config = "0.3.32"
