[package]
name    = "elevated_daemon_installer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform privileged daemon installer with GUI authorization"
repository = "https://github.com/cyrup-ai/elevated_daemon_installer"
keywords = ["daemon", "service", "installer", "systemd", "launchd"]
categories = ["os", "config"]

[features]
default = []
runtime = ["tokio", "async-process"]

[dependencies]
anyhow      = "1.0.86"
thiserror   = "1.0.61"
once_cell   = "1.19.0"
tracing     = "0.1.40"
serde       = { version = "1.0.203", features = ["derive"] }
serde_json  = "1.0.117"
cfg-if      = "1.0.0"
base64      = "0.22.0"
toml        = "0.8.12"
flate2      = "1.0.30"
async-recursion = "1.0.5"

# async support
async-process = { version = "2.3", optional = true }
tokio         = { version = "1.38.0", optional = true, features = ["process", "macros", "signal", "rt-multi-thread", "time", "fs"] }

# platform-specific deps
[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi  = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "securitybaseapi"] }
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist  = "1.6.1"
zip    = { version = "0.6.6", default-features = false, features = ["deflate"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]