[package]
name = "sweetmcp-client-autoconfig"
version = "0.1.0"
edition = "2021"

[dependencies]
# File watching with the LATEST watchexec for zero memory leaks
watchexec = "8.0.1"
watchexec-filterer-globset = "6.0.0"
watchexec-events = "4.0.0"

# Config file handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Core utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"

# Plugin system
extism = "1.4"
extism-pdk = "1.2"

# Platform-specific features
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[lib]
name = "sweetmcp_client_autoconfig"
path = "src/lib.rs"

[[bin]]
name = "sweetmcp-autoconfig"
path = "src/main.rs"