[package]
name = "sweetmcp-client-autoconfig"
version = "0.1.0"
edition = "2021"

[dependencies]
# File watching with latest watchexec
watchexec = { workspace = true }
watchexec-filterer-globset = { workspace = true }
watchexec-events = { workspace = true }
watchexec-signals = { workspace = true }
miette = { workspace = true }

# Config file handling
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Core utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
directories = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

# Plugin system
extism = { workspace = true }
extism-pdk = { workspace = true }

# Workspace hack
sweetmcp-workspace-hack = { path = "../sweetmcp-workspace-hack" }

# Platform-specific features
[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }

[lib]
name = "sweetmcp_client_autoconfig"
path = "src/lib.rs"

[[bin]]
name = "sweetmcp-autoconfig"
path = "src/main.rs"