[package]
name         = "sweetmcp-daemon"
version      = "0.2.0"
edition      = "2021"
license      = "Apache-2.0 OR MIT"

[dependencies]
anyhow               = "1"
chrono               = { version = "0.4", features = ["serde"] }
crossbeam-channel    = "0.5"
env_logger           = "0.11"
log                  = "0.4"
nix                  = { version = "0.27", default-features = false, features = ["fs", "process", "signal", "user"] }
once_cell            = "1"          # one‑time global config
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
toml                 = "0.8"
systemd = { version = "0.10", optional = true }
clap         = { version = "4.5", features = ["derive"] }   # for the new CLI
which        = "8"                                         # locate system executables
exec = "0.3.1"
dirs = "6.0.0"
thiserror   = "1.0.61"
cfg-if      = "1.0.0"
base64      = "0.22.0"
flate2      = { workspace = true }
async-recursion = "1.0.5"

# Auto-configuration support
sweetmcp-client-autoconfig = { path = "../sweetmcp-client-autoconfig" }

# async support
async-process = { version = "2.3", optional = true }
tokio         = { version = "1.38.0", optional = true, features = ["process", "macros", "signal", "rt-multi-thread", "time", "fs"] }
sweetmcp-workspace-hack = { version = "0.1", path = "../sweetmcp-workspace-hack" }
rcgen = "0.13"

[features]
default = ["runtime"]
systemd-notify = ["systemd"]
systemd = ["dep:systemd"]
runtime = ["tokio", "async-process"]

# platform-specific deps
[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi  = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "securitybaseapi"] }
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist  = "1.6.1"
zip    = { version = "0.6.6", default-features = false, features = ["deflate"] }

[build-dependencies]
pkg-config = "0.3.32"
