[package]
name = "sweetmcp-memory"
version = "0.1.0"
edition = "2024"
description = "Cognitive Memory System with quantum-inspired routing and emergent evolution"
authors = ["David Maple<david@cyrup.ai>"]
license = "MIT"

[dependencies]
# SurrealDB and its features
surrealdb = { version = "2.2", features = ["http", "protocol-http", "kv-surrealkv", "kv-mem"] }
sweetmcp-workspace-hack = { version = "0.1", path = "../sweetmcp-workspace-hack" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
bincode = { version = "1.3" }
prometheus = { version = "0.13" }

# Cognitive system dependencies
rand = { version = "0.8" }
base64 = { version = "0.22" }
ndarray = { version = "0.16" }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
petgraph = { version = "0.6" }
ordered-float = { version = "4.2" }
dashmap = { version = "6.0" }
async-channel = { version = "2.3" }

# Missing dependencies for cognitive features
sha2 = { version = "0.10" }
walkdir = { version = "2.3" }
num_cpus = { version = "1.16" }
num-complex = { version = "0.4" }

# Optional vector store implementations
faiss = { version = "0.1.0", optional = true }
hnsw = { version = "0.1.0", optional = true }

# HTTP API (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

[dev-dependencies]
# Testing
mockall = { version = "0.13" }
mockito = { version = "1.5" }
assert_approx_eq = { version = "1.1" }
criterion = { version = "0.5" }
tempfile = { version = "3.0" }
rand = { version = "0.8" }
gix = { version = "0.67" }

[features]
default = ["surreal-vector", "openai-embeddings"]
api = ["axum", "tower", "tower-http"]
faiss-vector = ["faiss"]
hnsw-vector = ["hnsw"]
surreal-vector = []
openai-embeddings = []
custom-embeddings = []
cognitive = []
quantum-routing = ["cognitive"]
evolution = ["cognitive"]
full-cognitive = ["cognitive", "quantum-routing", "evolution"]

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "python_comparison_bench"
path = "benches/python_comparison_bench.rs"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "memory_types"
path = "examples/memory_types.rs"

[[example]]
name = "async_patterns"
path = "examples/async_patterns.rs"
