[package]
name = "sweetmcp-plugin-builder"
version = "0.1.0"
edition = "2024"
authors = ["David Maple <david@cyrup.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/sweetmcp"
description = "Sexy fluent builder for creating MCP plugins with zero boilerplate"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
extism-pdk = "1.4.1"

[dev-dependencies]
sha2 = "0.10"
base64 = "0.22"