[package]
name = "llm_cli"
version = "0.1.0"
edition.workspace = true
authors = ["Shelby Jenkins"]
description = "Provides an `llm` binary with `chat` and `completion` subcommands"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "llm"
path = "src/main.rs"

[dependencies]
# Core dependencies
llm_client = { workspace = true, features = ["all"] }
llm_models = { workspace = true }
llm_prompt = { workspace = true }

# CLI and async
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"

# Output formatting
colorful = { workspace = true }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Utilities
atty = "0.2"
dirs = "5.0"
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["all-providers"]
all-providers = ["llm_client/all"]