[package]
description="llm_prompt: Low Level Prompt System for API LLMs and local LLMs"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_prompt"
readme="README.md"
repository.workspace=true
version="0.0.3"

[dependencies]
anyhow.workspace=true
minijinja.workspace = true # Use workspace definition
serde.workspace = true # Use workspace definition (ensure root includes features = ["derive", "rc"])
thiserror.workspace=true
tracing.workspace=true

[dev-dependencies]
llm_models = { workspace = true, features = ["model-tokenizers"] } # Use workspace dependency
serde_json.workspace=true
tempfile="3.15.0"
