[package]
name = "mcp-plugin-browser"
version = "0.1.0"
edition = "2021"
authors = ["David Maple<david@cyrup.ai>"]
description = "MCP browser automation server in Rust"
repository = "https://github.com/cyrup-ai/mcp-plugin-browser"
license = "MIT"

[dependencies]
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.31"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
thiserror = "2.0.12"
base64 = "0.22.1"
image = "0.25.6"
clipboard = "0.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
anyhow = "1.0.79"
kalosm = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort", features = [
    "language",
    "metal",
    "surrealdb",
    "vision",
    "prompt_annealing",
    "bert",
], default-features = false }
kalosm-sample = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-llama = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-ocr = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-language-model = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-language = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-vision = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
kalosm-common = { git = "https://github.com/cyrup-ai/floneum.git", branch = "update-ort" }
chrono = "0.4.35"
urlencoding = "2.1.3"
arboard = "3.3.0"
uuid = { version = "1.6.1", features = ["v4"] }
once_cell = "1.19.0"
derive_builder = "0.20.2"
bytes = "1.5.0"
surrealdb = { version = "2.2.1", features = ["kv-mem", "kv-surrealkv", "protocol-ws"] }
url = "2.5.0"
serde_yaml = "0.9.34"

[[bin]]
name = "mcp-plugin-browser"
path = "src/main.rs"
