[package]
name = "mcp-plugin-qr-code"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcp-plugin-qr-code"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.7"
base64 = "0.21"
qrcode-png = "0.4.1"
