[package]
name = "sweetmcp-plugin-browser"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweetmcp_plugin_browser"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
base64-serde = "0.8.0"
# sweetmcp-workspace-hack = { version = "0.1", path = "../../packages/sweetmcp-workspace-hack" }

