[package]
name = "sweetmcp-plugin-eval-sh"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweetmcp_plugin_eval_sh"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustpython-vm = { version = "0.4.0", default-features = false, features = ["compiler"] }
once_cell = "1.21"
base64-serde = "0.8.0"
base64 = "0.22.1"
sweetmcp-workspace-hack = { version = "0.1", path = "../../sweetmcp-workspace-hack" }

[target.wasm32-wasi.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
