[package]
name = "sweetmcp-plugin-fs"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweetmcp_plugin_fs"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.7"
base64 = "0.21"
htmd = "0.1.6"
sweetmcp-workspace-hack = { version = "0.1", path = "../../sweetmcp-workspace-hack" }
