[package]
name = "sweetmcp-plugin-hash"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweetmcp_plugin_hash"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
base64-serde = "0.8.0"
sha2 = "0.10"
md5 = "0.8"
sha1 = "0.10"
base32 = "0.5"
sweetmcp-workspace-hack = { version = "0.1", path = "../../sweetmcp-workspace-hack" }
