[package]
name = "sweetmcp-plugin-reasoner"
version = "0.1.0"
edition = "2024"
description = "WASM plugin for MCP Reasoner with Beam Search and Monte Carlo Tree Search"
license = "MIT"
repository = "https://github.com/yourusername/mcp-reasoner-plugin"

[lib]
name = "sweetmcp_plugin_reasoner"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["rt", "macros"] }
async-trait = "0.1.77"
thiserror = "1.0"
lru = "0.12.1"
sweetmcp-workspace-hack = { version = "0.1", path = "../../sweetmcp-workspace-hack" }
