[package]
name = "sweetmcp-plugin-reasoner"
version = "0.1.0"
edition = "2024"
description = "WASM plugin for MCP Reasoner with Beam Search and Monte Carlo Tree Search"
license = "MIT"
repository = "https://github.com/yourusername/mcp-reasoner-plugin"

[lib]
name = "sweetmcp_plugin_reasoner"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde", "rng-getrandom"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
once_cell = "1.21"
# sweetmcp-workspace-hack = { version = "0.1", path = "../../packages/sweetmcp-workspace-hack" }
